added actions suggestions for /armenu execute